grammarProject/.antlr/grammarProjectParser.js
// Generated from d:/Universidad/2 AÑO/SSL/Proyecto/grammarProject/grammarProject.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class grammarProjectParser extends antlr4.Parser {

    static grammarFileName = "grammarProject.g4";
    static literalNames = [ null, "'flujo'", "'estado'", "'inicio'", "'fin'", 
                            "'rol'", "'puede'", "'crear'", "'rechazar'", 
                            "'revisar'", "'aprobar'", "'archivar'", "'desde'", 
                            "'hacia'", "'cuando'", "'accion'", "'asignar'", 
                            "'registrar'", "'notificar'", "'con'", null, 
                            "';'", "'('", "')'", "'='", "'=='", "'.'", "'['", 
                            "']'", "'{'", "'}'", "','", "'\"'", "':'" ];
    static symbolicNames = [ null, "FLOW", "STATE", "START", "END", "ROLE", 
                             "CAN", "CREATE", "REFUSE", "REVISE", "APPROVE", 
                             "ARCHIVE", "FROM", "TO", "WHEN", "ACTION", 
                             "ASSIGN", "REGISTER", "NOTIFY", "WITH", "BOOLEAN", 
                             "SEMICOLON", "LPAREN", "RPAREN", "ASSIGNVALUE", 
                             "ISEQUAL", "DOT", "LBRACKET", "RBRACKET", "LBRACE", 
                             "RBRACE", "COMMA", "DOBLEQUOTE", "COLON", "STRING", 
                             "ID", "NUMBER", "WS" ];
    static ruleNames = [ "program", "definition", "state", "role", "permission", 
                         "transition", "condition", "action", "instruction", 
                         "notification", "value" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = grammarProjectParser.ruleNames;
        this.literalNames = grammarProjectParser.literalNames;
        this.symbolicNames = grammarProjectParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, grammarProjectParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 22;
	        this.match(grammarProjectParser.FLOW);
	        this.state = 23;
	        this.match(grammarProjectParser.ID);
	        this.state = 24;
	        this.match(grammarProjectParser.LBRACE);
	        this.state = 28;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 299044) !== 0)) {
	            this.state = 25;
	            this.definition();
	            this.state = 30;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 31;
	        this.match(grammarProjectParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	definition() {
	    let localctx = new DefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, grammarProjectParser.RULE_definition);
	    try {
	        this.state = 38;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 2:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 33;
	            this.state_();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 34;
	            this.role();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 35;
	            this.transition();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 36;
	            this.action();
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 37;
	            this.notification();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	state_() {
	    let localctx = new StateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, grammarProjectParser.RULE_state);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 40;
	        this.match(grammarProjectParser.STATE);
	        this.state = 41;
	        this.match(grammarProjectParser.ID);
	        this.state = 43;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3 || _la===4) {
	            this.state = 42;
	            _la = this._input.LA(1);
	            if(!(_la===3 || _la===4)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	        this.state = 45;
	        this.match(grammarProjectParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	role() {
	    let localctx = new RoleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, grammarProjectParser.RULE_role);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this.match(grammarProjectParser.ROLE);
	        this.state = 48;
	        this.match(grammarProjectParser.ID);
	        this.state = 49;
	        this.match(grammarProjectParser.CAN);
	        this.state = 50;
	        this.match(grammarProjectParser.LBRACKET);
	        this.state = 51;
	        this.permission();
	        this.state = 56;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===31) {
	            this.state = 52;
	            this.match(grammarProjectParser.COMMA);
	            this.state = 53;
	            this.permission();
	            this.state = 58;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 59;
	        this.match(grammarProjectParser.RBRACKET);
	        this.state = 60;
	        this.match(grammarProjectParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	permission() {
	    let localctx = new PermissionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, grammarProjectParser.RULE_permission);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 62;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 3968) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	transition() {
	    let localctx = new TransitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, grammarProjectParser.RULE_transition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 64;
	        this.match(grammarProjectParser.FROM);
	        this.state = 65;
	        this.match(grammarProjectParser.ID);
	        this.state = 66;
	        this.match(grammarProjectParser.TO);
	        this.state = 67;
	        this.match(grammarProjectParser.ID);
	        this.state = 68;
	        this.match(grammarProjectParser.WHEN);
	        this.state = 69;
	        this.condition();
	        this.state = 70;
	        this.match(grammarProjectParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condition() {
	    let localctx = new ConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, grammarProjectParser.RULE_condition);
	    try {
	        this.state = 78;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 72;
	            this.match(grammarProjectParser.ID);
	            this.state = 73;
	            this.match(grammarProjectParser.DOT);
	            this.state = 74;
	            this.permission();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 75;
	            this.match(grammarProjectParser.ID);
	            this.state = 76;
	            this.match(grammarProjectParser.ISEQUAL);
	            this.state = 77;
	            this.value();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	action() {
	    let localctx = new ActionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, grammarProjectParser.RULE_action);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 80;
	        this.match(grammarProjectParser.ACTION);
	        this.state = 81;
	        this.match(grammarProjectParser.ID);
	        this.state = 82;
	        this.match(grammarProjectParser.LBRACE);
	        this.state = 86;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16 || _la===17) {
	            this.state = 83;
	            this.instruction();
	            this.state = 88;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 89;
	        this.match(grammarProjectParser.RBRACE);
	        this.state = 90;
	        this.match(grammarProjectParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instruction() {
	    let localctx = new InstructionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, grammarProjectParser.RULE_instruction);
	    try {
	        this.state = 103;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 16:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 92;
	            this.match(grammarProjectParser.ASSIGN);
	            this.state = 93;
	            this.match(grammarProjectParser.ID);
	            this.state = 94;
	            this.match(grammarProjectParser.ASSIGNVALUE);
	            this.state = 95;
	            this.value();
	            this.state = 96;
	            this.match(grammarProjectParser.SEMICOLON);
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 98;
	            this.match(grammarProjectParser.REGISTER);
	            this.state = 99;
	            this.match(grammarProjectParser.LPAREN);
	            this.state = 100;
	            this.match(grammarProjectParser.STRING);
	            this.state = 101;
	            this.match(grammarProjectParser.RPAREN);
	            this.state = 102;
	            this.match(grammarProjectParser.SEMICOLON);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	notification() {
	    let localctx = new NotificationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, grammarProjectParser.RULE_notification);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.match(grammarProjectParser.NOTIFY);
	        this.state = 106;
	        this.match(grammarProjectParser.ID);
	        this.state = 107;
	        this.match(grammarProjectParser.WITH);
	        this.state = 108;
	        this.match(grammarProjectParser.STRING);
	        this.state = 109;
	        this.match(grammarProjectParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	value() {
	    let localctx = new ValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, grammarProjectParser.RULE_value);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 111;
	        _la = this._input.LA(1);
	        if(!(((((_la - 20)) & ~0x1f) === 0 && ((1 << (_la - 20)) & 114689) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

grammarProjectParser.EOF = antlr4.Token.EOF;
grammarProjectParser.FLOW = 1;
grammarProjectParser.STATE = 2;
grammarProjectParser.START = 3;
grammarProjectParser.END = 4;
grammarProjectParser.ROLE = 5;
grammarProjectParser.CAN = 6;
grammarProjectParser.CREATE = 7;
grammarProjectParser.REFUSE = 8;
grammarProjectParser.REVISE = 9;
grammarProjectParser.APPROVE = 10;
grammarProjectParser.ARCHIVE = 11;
grammarProjectParser.FROM = 12;
grammarProjectParser.TO = 13;
grammarProjectParser.WHEN = 14;
grammarProjectParser.ACTION = 15;
grammarProjectParser.ASSIGN = 16;
grammarProjectParser.REGISTER = 17;
grammarProjectParser.NOTIFY = 18;
grammarProjectParser.WITH = 19;
grammarProjectParser.BOOLEAN = 20;
grammarProjectParser.SEMICOLON = 21;
grammarProjectParser.LPAREN = 22;
grammarProjectParser.RPAREN = 23;
grammarProjectParser.ASSIGNVALUE = 24;
grammarProjectParser.ISEQUAL = 25;
grammarProjectParser.DOT = 26;
grammarProjectParser.LBRACKET = 27;
grammarProjectParser.RBRACKET = 28;
grammarProjectParser.LBRACE = 29;
grammarProjectParser.RBRACE = 30;
grammarProjectParser.COMMA = 31;
grammarProjectParser.DOBLEQUOTE = 32;
grammarProjectParser.COLON = 33;
grammarProjectParser.STRING = 34;
grammarProjectParser.ID = 35;
grammarProjectParser.NUMBER = 36;
grammarProjectParser.WS = 37;

grammarProjectParser.RULE_program = 0;
grammarProjectParser.RULE_definition = 1;
grammarProjectParser.RULE_state = 2;
grammarProjectParser.RULE_role = 3;
grammarProjectParser.RULE_permission = 4;
grammarProjectParser.RULE_transition = 5;
grammarProjectParser.RULE_condition = 6;
grammarProjectParser.RULE_action = 7;
grammarProjectParser.RULE_instruction = 8;
grammarProjectParser.RULE_notification = 9;
grammarProjectParser.RULE_value = 10;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = grammarProjectParser.RULE_program;
    }

	FLOW() {
	    return this.getToken(grammarProjectParser.FLOW, 0);
	};

	ID() {
	    return this.getToken(grammarProjectParser.ID, 0);
	};

	LBRACE() {
	    return this.getToken(grammarProjectParser.LBRACE, 0);
	};

	RBRACE() {
	    return this.getToken(grammarProjectParser.RBRACE, 0);
	};

	definition = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DefinitionContext);
	    } else {
	        return this.getTypedRuleContext(DefinitionContext,i);
	    }
	};


}



class DefinitionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = grammarProjectParser.RULE_definition;
    }

	state_() {
	    return this.getTypedRuleContext(StateContext,0);
	};

	role() {
	    return this.getTypedRuleContext(RoleContext,0);
	};

	transition() {
	    return this.getTypedRuleContext(TransitionContext,0);
	};

	action() {
	    return this.getTypedRuleContext(ActionContext,0);
	};

	notification() {
	    return this.getTypedRuleContext(NotificationContext,0);
	};


}



class StateContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = grammarProjectParser.RULE_state;
    }

	STATE() {
	    return this.getToken(grammarProjectParser.STATE, 0);
	};

	ID() {
	    return this.getToken(grammarProjectParser.ID, 0);
	};

	SEMICOLON() {
	    return this.getToken(grammarProjectParser.SEMICOLON, 0);
	};

	START() {
	    return this.getToken(grammarProjectParser.START, 0);
	};

	END() {
	    return this.getToken(grammarProjectParser.END, 0);
	};


}



class RoleContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = grammarProjectParser.RULE_role;
    }

	ROLE() {
	    return this.getToken(grammarProjectParser.ROLE, 0);
	};

	ID() {
	    return this.getToken(grammarProjectParser.ID, 0);
	};

	CAN() {
	    return this.getToken(grammarProjectParser.CAN, 0);
	};

	LBRACKET() {
	    return this.getToken(grammarProjectParser.LBRACKET, 0);
	};

	permission = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PermissionContext);
	    } else {
	        return this.getTypedRuleContext(PermissionContext,i);
	    }
	};

	RBRACKET() {
	    return this.getToken(grammarProjectParser.RBRACKET, 0);
	};

	SEMICOLON() {
	    return this.getToken(grammarProjectParser.SEMICOLON, 0);
	};

	COMMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(grammarProjectParser.COMMA);
	    } else {
	        return this.getToken(grammarProjectParser.COMMA, i);
	    }
	};



}



class PermissionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = grammarProjectParser.RULE_permission;
    }

	CREATE() {
	    return this.getToken(grammarProjectParser.CREATE, 0);
	};

	REFUSE() {
	    return this.getToken(grammarProjectParser.REFUSE, 0);
	};

	REVISE() {
	    return this.getToken(grammarProjectParser.REVISE, 0);
	};

	APPROVE() {
	    return this.getToken(grammarProjectParser.APPROVE, 0);
	};

	ARCHIVE() {
	    return this.getToken(grammarProjectParser.ARCHIVE, 0);
	};


}



class TransitionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = grammarProjectParser.RULE_transition;
    }

	FROM() {
	    return this.getToken(grammarProjectParser.FROM, 0);
	};

	ID = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(grammarProjectParser.ID);
	    } else {
	        return this.getToken(grammarProjectParser.ID, i);
	    }
	};


	TO() {
	    return this.getToken(grammarProjectParser.TO, 0);
	};

	WHEN() {
	    return this.getToken(grammarProjectParser.WHEN, 0);
	};

	condition() {
	    return this.getTypedRuleContext(ConditionContext,0);
	};

	SEMICOLON() {
	    return this.getToken(grammarProjectParser.SEMICOLON, 0);
	};


}



class ConditionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = grammarProjectParser.RULE_condition;
    }

	ID() {
	    return this.getToken(grammarProjectParser.ID, 0);
	};

	DOT() {
	    return this.getToken(grammarProjectParser.DOT, 0);
	};

	permission() {
	    return this.getTypedRuleContext(PermissionContext,0);
	};

	ISEQUAL() {
	    return this.getToken(grammarProjectParser.ISEQUAL, 0);
	};

	value() {
	    return this.getTypedRuleContext(ValueContext,0);
	};


}



class ActionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = grammarProjectParser.RULE_action;
    }

	ACTION() {
	    return this.getToken(grammarProjectParser.ACTION, 0);
	};

	ID() {
	    return this.getToken(grammarProjectParser.ID, 0);
	};

	LBRACE() {
	    return this.getToken(grammarProjectParser.LBRACE, 0);
	};

	RBRACE() {
	    return this.getToken(grammarProjectParser.RBRACE, 0);
	};

	SEMICOLON() {
	    return this.getToken(grammarProjectParser.SEMICOLON, 0);
	};

	instruction = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(InstructionContext);
	    } else {
	        return this.getTypedRuleContext(InstructionContext,i);
	    }
	};


}



class InstructionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = grammarProjectParser.RULE_instruction;
    }

	ASSIGN() {
	    return this.getToken(grammarProjectParser.ASSIGN, 0);
	};

	ID() {
	    return this.getToken(grammarProjectParser.ID, 0);
	};

	ASSIGNVALUE() {
	    return this.getToken(grammarProjectParser.ASSIGNVALUE, 0);
	};

	value() {
	    return this.getTypedRuleContext(ValueContext,0);
	};

	SEMICOLON() {
	    return this.getToken(grammarProjectParser.SEMICOLON, 0);
	};

	REGISTER() {
	    return this.getToken(grammarProjectParser.REGISTER, 0);
	};

	LPAREN() {
	    return this.getToken(grammarProjectParser.LPAREN, 0);
	};

	STRING() {
	    return this.getToken(grammarProjectParser.STRING, 0);
	};

	RPAREN() {
	    return this.getToken(grammarProjectParser.RPAREN, 0);
	};


}



class NotificationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = grammarProjectParser.RULE_notification;
    }

	NOTIFY() {
	    return this.getToken(grammarProjectParser.NOTIFY, 0);
	};

	ID() {
	    return this.getToken(grammarProjectParser.ID, 0);
	};

	WITH() {
	    return this.getToken(grammarProjectParser.WITH, 0);
	};

	STRING() {
	    return this.getToken(grammarProjectParser.STRING, 0);
	};

	SEMICOLON() {
	    return this.getToken(grammarProjectParser.SEMICOLON, 0);
	};


}



class ValueContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = grammarProjectParser.RULE_value;
    }

	BOOLEAN() {
	    return this.getToken(grammarProjectParser.BOOLEAN, 0);
	};

	NUMBER() {
	    return this.getToken(grammarProjectParser.NUMBER, 0);
	};

	ID() {
	    return this.getToken(grammarProjectParser.ID, 0);
	};

	STRING() {
	    return this.getToken(grammarProjectParser.STRING, 0);
	};


}




grammarProjectParser.ProgramContext = ProgramContext; 
grammarProjectParser.DefinitionContext = DefinitionContext; 
grammarProjectParser.StateContext = StateContext; 
grammarProjectParser.RoleContext = RoleContext; 
grammarProjectParser.PermissionContext = PermissionContext; 
grammarProjectParser.TransitionContext = TransitionContext; 
grammarProjectParser.ConditionContext = ConditionContext; 
grammarProjectParser.ActionContext = ActionContext; 
grammarProjectParser.InstructionContext = InstructionContext; 
grammarProjectParser.NotificationContext = NotificationContext; 
grammarProjectParser.ValueContext = ValueContext; 
